# osu-db-parser

./: Cargo.toml  README.md  rust-toolchain.toml  shell.nix
.github/workflows/: static.yml
parser/: Cargo.toml
parser/src/: beatmaps.rs  collections.rs  common.rs  error.rs  lib.rs  prelude.rs  scores.rs
src/: beatmaps.rs  collections.rs  common.rs  error.rs  lib.rs  osu.rs  scores.rs
viewer/: Cargo.toml  index.html
viewer/assets/: sw.js
viewer/src/: app.rs  main.rs  widgets.rs
viewer/src/app/: beatmap_details.rs  beatmap_listing.rs  collection_listing.rs  replays.rs  score_details.rs  score_listing.rs
viewer/src/widgets/: file_dialog.rs  file_dialog_wasm.rs
