[package]
name = "osu-db-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.22"
eframe = { version = "0.22", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts
    "glow",          # Use the glow rendering backend. Alternative: "wgpu
    "wayland",       # Enable Wayland where available
] }
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
