[package]
name = "osu-db-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
osu-db-parser = { version = "0.1", path = "../parser" }

egui = "0.22"
eframe = { version = "0.22", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts
    "glow",          # Use the glow rendering backend. Alternative: "wgpu
    "wayland",       # Enable Wayland where available
] }
log = "0.4"
webbrowser = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
rfd = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
