[package]
name = "osu-db-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
osu-db-parser = { version = "0.1", path = "../parser" }

egui = "0.26"
egui_plot = "0.26"
eframe = { version = "0.26", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts
    "glow",          # Use the glow rendering backend
    "x11",           # Enable support for the X11 backend on Linux
    "wayland",       # Enable support for the Wayland backend on Linux
] }
log = "0.4"
webbrowser = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
rfd = "0.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["FileReader"] }
